--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,9 +1,8 @@
-<div class="min-vh-100 d-flex flex-column justify-content-center align-items-center bg-light text-center px-3">
+<div class="login-background text-center px-3">
     <div class="card p-4 shadow-lg" style="width: 100%; max-width: 500px;">
         <h2 class="mb-4 text-primary">Crear Cuenta</h2>
 
         <form (ngSubmit)="onSubmit()" [formGroup]="registerForm" novalidate>
-
             <!-- Nombre completo -->
             <div class="mb-3 text-start">
                 <input type="text" formControlName="name" class="form-control" placeholder="Nombre completo" />
@@ -47,15 +46,16 @@
                 </div>
             </div>
 
-            <!-- Botón de registro -->
-            <button type="submit" class="btn btn-primary w-100">
-                Crear cuenta
-            </button>
+            <button type="submit" class="btn btn-primary w-100">Crear cuenta</button>
         </form>
 
-        <!-- Mensaje de error general -->
         <div *ngIf="error" class="alert alert-danger mt-3">
             {{ error }}
+        </div>
+
+        <div class="mt-3 d-flex justify-content-center align-items-center">
+            <span class="me-1">¿Tienes cuenta?</span>
+            <a routerLink="/login" class="fw-bold text-decoration-none text-primary">Inicia sesión</a>
         </div>
     </div>
 </div>
